test/resources/invalid/parse/InvalidConstant.flo
string usersUrl '/users';

action GET_ALL_USERS = network(url = usersUrl, method = 'GET');
action UPDATE_USER = network(url = '/users/:uuid', method = 'PUT');
action ENOUGH_USERS_ONLINE = toggle();

flow USERS = {
    string[] users = [];
    boolean enoughUsersOnline = false;
    GET_ALL_USERS >> users;
    UPDATE_USER >> users;
    ENOUGH_USERS_ONLINE >> enoughUsersOnline;
}
